@@ -1,5 +1,9 @@
 Revision history for libev, a high-performance and full-featured event loop.
 
+	- added linux eventfd support.
+        - try to autodetect epoll and inotify support
+          by libc header version if not using autoconf.
+
 3.2  Wed Apr  2 17:11:19 CEST 2008
 	- fix a 64 bit overflow issue in the select backend,
           by using fd_mask instead of int for the mask.
